force-app/main/default/objects/Candidate_detail__c/Candidate_detail__c.object-meta.xml
<CustomObject>
    <label>Candidate detail</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>