force-app/main/default/objects/Candidate_detail__c/fields/Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidate details</relationshipLabel>
    <relationshipName>Candidate_details</relationshipName>
    <type>Lookup</type>
</CustomField>