force-app/main/default/objects/Candidate_detail__c/fields/JobPost__c.field-meta.xml
<CustomField>
    <fullName>JobPost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobPost</label>
    <referenceTo>JobPost__c</referenceTo>
    <relationshipLabel>Candidate details</relationshipLabel>
    <relationshipName>Candidate_details</relationshipName>
    <type>Lookup</type>
</CustomField>