force-app/main/default/objects/Candidate_detail__c/fields/Relevant_Salesforce_Experience_in_Year__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Salesforce_Experience_in_Year__c</fullName>
    <label>Relevant Salesforce Experience in Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>